# spark

./: CMakeLists.txt  README.md  _build.ham  cmake.bat  run.bat
common/: _build.ham
common/includes/: Defs.hpp  Impls.hpp  MathTypes.hpp  Types.hpp  ValueTypes.hpp
common/tests/: MathTypesTest.cpp  TestMain.cpp  TestMain.hpp  ValueTypesTest.cpp  _build.ham
game/: _build.ham
game/includes/: Game.hpp  GameAura.hpp  GameCombat.hpp  GameGrid.hpp  GameObject.hpp  GameSkill.hpp  GameStats.hpp
game/includes/objects/: Character.hpp
game/src/: GameAura.cpp  GameCombat.cpp  GameGrid.cpp  GameObject.cpp  GameSkill.cpp  GameStats.cpp  _build.ham
game/src/objects/: Character.cpp
game/tests/: CharacterTest.cpp  CombatTest.cpp  GameGridTest.cpp  TestMain.cpp  _build.ham
